src/objects/MetadataAuditSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <description>Connected App Consumer Key</description>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <description>Connected App consumer secret</description>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>URL to the token service, e.g. https://your-my-domain.my.salesforce.com/services/oauth2/token</description>
        <inlineHelpText>URL to the token service, e.g. https://your-my-domain.my.salesforce.com/services/oauth2/token</inlineHelpText>
        <label>Token service endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobRunId__c</fullName>
        <description>For storing the ID of the currently running job</description>
        <label>JobRunId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRunMetadataType__c</fullName>
        <label>LastRunMetadataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Run-as password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username of the user to connect as</description>
        <label>Run-as username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MetadataAuditSettings</label>
</CustomObject>